fix: 'to' datepicker alignment was off on mobile

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -461,3 +461,7 @@ p.name {
     font-weight: 200;
     opacity: 0.7;
 }
+
+div#picker_to >.time-popover {
+    left: -93px !important;
+}
